force-app/main/default/objects/Contact/fields/Artem_Share__c.field-meta.xml
<CustomField>
    <fullName>Artem_Share__c</fullName>
    <formula>Final_Total__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Artem Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>