force-app/main/default/objects/Contact/fields/brevo__BrevoId__c.field-meta.xml
<CustomField>
    <fullName>brevo__BrevoId__c</fullName>
    <label>Brevo ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>