force-app/main/default/objects/Contact/fields/brevo__BrevoLink__c.field-meta.xml
<CustomField>
    <fullName>brevo__BrevoLink__c</fullName>
    <label>Brevo Link</label>
    <type>Url</type>
</CustomField>