force-app/main/default/objects/Contact/fields/Cloudrop__Invalid__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Contact</label>
    <type>Checkbox</type>
</CustomField>