force-app/main/default/objects/Contact/fields/Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Age__c</fullName>
    <formula>IF(
				TODAY() &lt; DATE(YEAR(TODAY()), MONTH(Birthdate), DAY(Birthdate)),
    YEAR(TODAY()) - YEAR(Birthdate) - 1,
    YEAR(TODAY()) - YEAR(Birthdate)
)</formula>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>