force-app/main/default/objects/Contact/fields/Custom_Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dropbox_Path__c</fullName>
    <formula>IF(ISBLANK(Employer__c), &apos;Contacts/&apos;, &apos;Accounts/&apos; + Employer__r.Name + &apos;/Employees/&apos;) +  Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dropbox Path</label>
    <type>Text</type>
</CustomField>