force-app/main/default/objects/Contact/fields/Days_Before_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Birthday__c</fullName>
    <formula>Next_Birthday__c - TODAY()</formula>
    <label>Days Before Birthday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>