force-app/main/default/objects/Contact/fields/Default_Time_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Default_Time_Coefficient__c</fullName>
    <defaultValue>1</defaultValue>
    <description>standard coefficient of time on the project for a contact</description>
    <label>Default Time Coefficient</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>