force-app/main/default/objects/Contact/fields/Final_Total__c.field-meta.xml
<CustomField>
    <fullName>Final_Total__c</fullName>
    <formula>Current_Balance__c + Loans_DEL__c - Returns_DEL__c</formula>
    <label>Final Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>