force-app/main/default/objects/Contact/fields/IB_Address__c.field-meta.xml
<CustomField>
    <fullName>IB_Address__c</fullName>
    <inlineHelpText>Address of IB registration: Country, Postal Code, City, Street, Building, Appartments no.</inlineHelpText>
    <label>(deprecated)IB Address</label>
    <type>TextArea</type>
</CustomField>