force-app/main/default/objects/Contact/fields/IB_Bank_Information_EUR__c.field-meta.xml
<CustomField>
    <fullName>IB_Bank_Information_EUR__c</fullName>
    <label>(deprecated)IB Bank Information EUR</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>