force-app/main/default/objects/Contact/fields/IB_Bank_Information_USD__c.field-meta.xml
<CustomField>
    <fullName>IB_Bank_Information_USD__c</fullName>
    <inlineHelpText>Bank account no., Bank name, Bank postal code, Bank City, Street, Building, Bank Identification Code (БИК).</inlineHelpText>
    <label>(deprecated)IB Bank Information USD</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>