force-app/main/default/objects/Contact/fields/IB_Name__c.field-meta.xml
<CustomField>
    <fullName>IB_Name__c</fullName>
    <inlineHelpText>Name of individual business.</inlineHelpText>
    <label>(deprecated)IB Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>