force-app/main/default/objects/Contact/fields/IBAN_Number_BYN__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Number_BYN__c</fullName>
    <label>(deprecated)IBAN Number BYN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>