force-app/main/default/objects/Contact/fields/Is_IB__c.field-meta.xml
<CustomField>
    <fullName>Is_IB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if contact is active IB.</inlineHelpText>
    <label>(deprecated)Is IB?</label>
    <type>Checkbox</type>
</CustomField>