force-app/main/default/objects/Contact/fields/Kirill_R_Share__c.field-meta.xml
<CustomField>
    <fullName>Kirill_R_Share__c</fullName>
    <formula>Final_Total__c * 0.18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kirill R. Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>