force-app/main/default/objects/Contact/fields/Lena_Share__c.field-meta.xml
<CustomField>
    <fullName>Lena_Share__c</fullName>
    <formula>Final_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lena Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>