force-app/main/default/objects/Contact/fields/lleads__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>lleads__Is_Primary__c</fullName>
    <formula>IF(Account.lleads__Primary_Contact__r.Id = Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Primary</label>
    <type>Text</type>
</CustomField>