force-app/main/default/objects/Contact/fields/Loans__c.field-meta.xml
<CustomField>
    <fullName>Loans__c</fullName>
    <label>Loans</label>
    <summarizedField>Loan__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Loan__c.Closed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan__c.Person__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>