force-app/main/default/objects/Contact/fields/Loans_DEL__c.field-meta.xml
<CustomField>
    <fullName>Loans_DEL__c</fullName>
    <label>(deprecated) Loans</label>
    <summarizedField>Expense_Line_Item__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Line_Item__c.Is_Loan__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Line_Item__c.Person__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>