force-app/main/default/objects/Contact/fields/Returns__c.field-meta.xml
<CustomField>
    <fullName>Returns__c</fullName>
    <label>Returns</label>
    <summarizedField>Compensation__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Compensation__c.Closed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Compensation__c.Person__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>