force-app/main/default/objects/Contact/fields/Returns_DEL__c.field-meta.xml
<CustomField>
    <fullName>Returns_DEL__c</fullName>
    <label>(deprecated) Returns</label>
    <summarizedField>Expense_Line_Item__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Line_Item__c.Is_Return__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Line_Item__c.Person__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>