force-app/main/default/objects/Contact/fields/Sasha_B_Share__c.field-meta.xml
<CustomField>
    <fullName>Sasha_B_Share__c</fullName>
    <formula>Final_Total__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sasha B. Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>