force-app/main/default/objects/Contact/fields/Slack_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Member_Id__c</fullName>
    <label>Slack Member Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>