force-app/main/default/objects/Contact/fields/Slack_Username__c.field-meta.xml
<CustomField>
    <fullName>Slack_Username__c</fullName>
    <label>Slack Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>