force-app/main/default/objects/Contact/fields/Starting_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Work_Date__c</fullName>
    <label>Starting Work Date</label>
    <type>Date</type>
</CustomField>