force-app/main/default/objects/Contact/fields/Taxpayer_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Unique_Number__c</fullName>
    <inlineHelpText>УНП</inlineHelpText>
    <label>(deprecated)Taxpayer Unique Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>