force-app/main/default/objects/Contact/fields/TVA_CO__Email_Validation_Score__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Validation_Score__c</fullName>
    <label>Email Validation Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>