force-app/main/default/objects/Contact/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation of the employee to the specific unit entity. Required to properly calculate unit-related spendings: e.g. office, salary taxes (if entered all in one record), accounting for the entity, etc.</description>
    <label>Unit</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Unit)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>