force-app/main/default/objects/Contact/fields/Vlad_Share__c.field-meta.xml
<CustomField>
    <fullName>Vlad_Share__c</fullName>
    <formula>Final_Total__c  * 0.28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vlad Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>