force-app/main/default/objects/Contact/fields/Work_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Duration__c</fullName>
    <formula>TEXT(FLOOR((TODAY() - Starting_Work_Date__c)/365)) &amp; &quot; Years &quot; &amp; 
TEXT(FLOOR(MOD((TODAY() - Starting_Work_Date__c),365)/30)) &amp; &quot; Months &quot; &amp;
TEXT(MOD(MOD((TODAY() - Starting_Work_Date__c),365),30)) &amp; &quot; Days &quot;</formula>
    <label>Work Duration</label>
    <type>Text</type>
</CustomField>