force-app/main/default/objects/Contact/fields/Workload__c.field-meta.xml
<CustomField>
    <fullName>Workload__c</fullName>
    <label>Workload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>