force-app/main/default/objects/Contact/fields/Yarik_Share__c.field-meta.xml
<CustomField>
    <fullName>Yarik_Share__c</fullName>
    <formula>Final_Total__c  * 0.28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yarik Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>