force-app/main/default/objects/Contact/fields/zisf__ZoomInfo_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
    <defaultValue>&apos;Not Compared&apos;</defaultValue>
    <label>ZoomInfo Complete Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>