force-app/main/default/objects/Contact/fields/zisf__ZoomInfo_Email__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Email__c</fullName>
    <description>ZoomInfo Email address for the Contact record.</description>
    <inlineHelpText>ZoomInfo Email address for the Contact record.</inlineHelpText>
    <label>ZoomInfo Email</label>
    <type>Email</type>
</CustomField>