force-app/main/default/objects/Contact/recordTypes/Internal_IB.recordType-meta.xml
<RecordType>
    <fullName>Internal_IB</fullName>
    <active>false</active>
    <description>Contact for Legal Entities</description>
    <label>Billing</label>
</RecordType>