force-app/main/default/objects/Contact/validationRules/lleads__Contact_cannot_be_related_to_Lead_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>lleads__Contact_cannot_be_related_to_Lead_Acc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( AccountId )),
				NOT(ISBLANK( lleads__Lead__c ))
)</errorConditionFormula>
    <errorMessage>Contact cannot be related to the Lead and Account at the same time.</errorMessage>
</ValidationRule>