force-app/main/default/objects/Contact/listViews/Active_Internal.listView-meta.xml
<ListView>
    <fullName>Active_Internal</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Propeller Plan</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Internal</label>
</ListView>