force-app/main/default/objects/Contact/listViews/Kristina.listView-meta.xml
<ListView>
    <fullName>Kristina</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>kristina@propellerplan.com</value>
    </filters>
    <label>Kristina</label>
</ListView>